--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.BDA"
         tools:targetApi="31">
         <activity
+            android:name=".RecipientRegistrationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DonorRegistrationActivity"
+            android:exported="false" />
+        <activity
             android:name=".SelectRegistrationActivity"
             android:exported="false">
             <meta-data
